<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="com.example.artemqa.secondlabis.ui.MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_about_program_main_a"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/btn_about_program_main_a"
                android:textSize="16sp" />

            <Button
                android:id="@+id/btn_about_algorithm_main_a"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/btn_about_algorithm_main_a"
                android:textSize="16sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_work_with_file_main_a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:text="@string/tv_work_with_file_main_a"
            android:textColor="@color/colorPrimaryDark" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_encrypt_file_main_a"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:text="@string/btn_encrypt_file_main_a"
                android:textSize="12sp" />

            <Button
                android:id="@+id/btn_decrypt_file_main_a"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:text="@string/btn_decrypt_file_main_a"
                android:textSize="12sp" />
        </LinearLayout>


        <TextView
            android:id="@+id/tv_work_with_strings_main_a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="30dp"
            android:text="@string/tv_work_with_strings_main_a"
            android:textColor="@color/colorPrimaryDark" />

        <EditText
            android:id="@+id/et_encrypt_string_main_a"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:hint="@string/et_encrypt_string_main_a"
            android:maxLength="50" />
        <Button
            android:id="@+id/btn_encode_string_main_a"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/btn_encode_string_main_a"
            android:textSize="10sp"/>

        <EditText
            android:id="@+id/et_decrypt_string_main_a"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/et_decrypt_string_main_a"
            android:maxLength="50" />

        <Button
            android:id="@+id/btn_decode_string_main_a"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/btn_decode_string_main_a"
            android:textSize="10sp"/>

        <TextView
            android:id="@+id/tv_comment_main_a"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/tv_comment_main_a" />
        <TextView
            android:id="@+id/tv_generated_key_main_a"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
</ScrollView>